Fork for every class and build as fast as we can
We want a new JVM for every class we test (and we want just one test per
class) so we can later check the heap dump.
Might even be better to have maxParallelForks to cpus + 1, but let's
start here atleast.

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 defaultTasks 'build'
 
+test.forkEvery 1
+test.maxParallelForks Runtime.getRuntime().availableProcessors();
+
 repositories {
   mavenCentral()
 }
