--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'java'
 defaultTasks 'build'
 
-
-repositories {
-  mavenCentral()
-}
+repositories.mavenCentral()
 
 dependencies.testCompile 'junit:junit:4.+'
 
