--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ dependencies.testCompile 'junit:junit:4.+'
 
 test {
     systemProperty "temporaryDir", "${temporaryDir}"
+    reports.junitXml.enabled = false
+    reports.html.enabled = false
     forkEvery 1
     maxParallelForks Runtime.getRuntime().availableProcessors();
 }
