Add task for debugging the pom.xml

--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,8 @@ publishing {
   }
 }
 
+task publishToMavenLocal.doLast {
+  println new File("build/publications/SecurerString/pom-default.xml").text
+}
+
 jar.manifest.attributes 'Main-Class': "${group}.${project.name}"
