--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,19 @@ test {
     maxParallelForks Runtime.getRuntime().availableProcessors();
 }
 
+task sourceJar (type : Jar) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
 publishing {
   publications {
     "${project.name}"(MavenPublication) {
       from components.java
+
+      artifact (sourceJar) {
+        classifier = 'sources'
+      }
     }
   }
 }
