Publish javadocs to maven

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ task sourceJar (type : Jar) {
   from sourceSets.main.allSource
 }
 
+task javadocJar (type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
 publishing {
   publications {
     "${project.name}"(MavenPublication) {
@@ -29,6 +34,9 @@ publishing {
 
       artifact (sourceJar) {
         classifier = 'sources'
+      }
+      artifact (javadocJar) {
+        classifier = 'javadoc'
       }
     }
   }
