--- a/build.gradle
+++ b/build.gradle
@@ -17,19 +17,19 @@ test {
     maxParallelForks Runtime.getRuntime().availableProcessors();
 }
 
-task sourceJar (type : Jar) {
+task sourceJar (type: Jar) {
   classifier = 'sources'
   from sourceSets.main.allSource
 }
 
 task javadocJar (type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
-    from javadoc.destinationDir
+  from javadoc.destinationDir
 }
 
 publishing {
   publications {
-    "${project.name}"(MavenPublication) {
+    jar(MavenPublication) {
       from components.java
 
       artifact (sourceJar) {
