--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,20 @@ publishing {
               email 'simmel@soy.se'
             }
           }
+
+          build {
+            plugins {
+              plugin {
+                resolveStrategy = Closure.DELEGATE_ONLY
+                groupId 'org.apache.maven.plugins'
+                artifactId 'maven-gpg-plugin'
+                version '1.1'
+                configuration {
+                  useAgent 'true'
+                }
+              }
+            }
+          }
         }
       }
     }
