--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ publishing {
                 version '1.1'
                 configuration {
                   useAgent 'true'
+                  executable 'src/build/scripts/gpg'
                 }
               }
             }
