Reorder so it makes more sense</ocd>

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ afterEvaluate {
 
     publishing.publications.jar.artifacts.each {
       def m = it.file =~ /.*-([a-z]+?)\..*$/
-      def command = ["mvn", "-f", project.pomFile, "gpg:sign-and-deploy-file", "-Durl=${repo}", "-DpomFile=${project.pomFile}", "-Dfile=${it.file}", "-DrepositoryId=${repositoryId}"]
+      def command = ["mvn", "-f", project.pomFile, "gpg:sign-and-deploy-file", "-DpomFile=${project.pomFile}", "-Dfile=${it.file}", "-Durl=${repo}", "-DrepositoryId=${repositoryId}"]
       if (m) {
         command << "-Dclassifier=${m[0][1]}"
       }
