Use lazy dependency
Since the task doesn't exist, yet.

--- a/mvn-sign-deploy.gradle
+++ b/mvn-sign-deploy.gradle
@@ -1,5 +1,5 @@
 afterEvaluate {
-  task publish (dependsOn: publishing.publications.jar.artifacts + generatePomFileForJarPublication, overwrite: true) << {
+  task publish (dependsOn: publishing.publications.jar.artifacts + 'generatePomFileForJarPublication', overwrite: true) << {
     if (!project.hasProperty('repo') && !project.hasProperty('repositoryId')) {
       println "NOTE: repo and repositoryId isn't specified, so deploying locally."
       println "NOTE: Usage, e.g: gradle -Prepo=https://oss.sonatype.org/content/repositories/snapshots -PrepositoryId=sonatype-nexus-snapshots"
